--- a/simple.csproj
+++ b/simple.csproj
@@ -6,7 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
 
     <!-- This is the version your GitHub Action will update -->
-    <Version>1.0.0</Version>
+    <Version>1.2.3</Version>
+    <AssemblyVersion>1.2.3</AssemblyVersion>
+    <FileVersion>1.2.3</FileVersion>
 
   </PropertyGroup>
 
