--- a/.github/workflows/auto_version_bump.yml
+++ b/.github/workflows/auto_version_bump.yml
@@ -8,7 +8,9 @@ on:
 jobs:
   bump-version:
     runs-on: ubuntu-latest
-
+permissions:
+  contents: write
+  pull-requests: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
