--- a/.github/workflows/auto_version_bump.yml
+++ b/.github/workflows/auto_version_bump.yml
@@ -57,9 +57,8 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Bump patch version to ${{ env.NEW_VERSION }}"
-          branch: version-bump/${{ env.NEW_VERSION }}
+          commit-message: "Bump patch version to ${NEW_VERSION}"
+          branch: version-bump/${NEW_VERSION}
           base: ${{ env.RELEASE_BRANCH }}
-          title: "Bump patch version to ${{ env.NEW_VERSION }}"
+          title: "Bump patch version to ${NEW_VERSION}"
           body: "Automated patch version bump."
