--- a/.github/workflows/auto_version_bump.yml
+++ b/.github/workflows/auto_version_bump.yml
@@ -57,8 +57,10 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          commit-message: "Bump patch version to ${NEW_VERSION}"
-          branch: version-bump/${NEW_VERSION}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "Bump patch version to ${{ env.NEW_VERSION }}"
+          branch: version-bump/${{ env.NEW_VERSION }}
           base: ${{ env.RELEASE_BRANCH }}
-          title: "Bump patch version to ${NEW_VERSION}"
+          title: "Bump patch version to ${{ env.NEW_VERSION }}"
           body: "Automated patch version bump."
+
