--- a/.github/workflows/auto_version_bump.yml
+++ b/.github/workflows/auto_version_bump.yml
@@ -68,8 +68,9 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "Bump patch version to ${{ env.NEW_VERSION }}"
-          branch: version-bump/${NEW_VERSION}
+          branch: version-bump/${{ env.NEW_VERSION }}   # FIXED
           base: ${{ env.RELEASE_BRANCH }}
           title: "Bump patch version to ${{ env.NEW_VERSION }}"
           body: "Automated patch version bump."
+
 
