--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -1,7 +1,9 @@
 name: Auto Create Pull Request
 
 on: workflow_dispatch
-
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   create_pr:
     runs-on: ubuntu-latest
