--- a/.github/workflows/auto_version_bump.yml
+++ b/.github/workflows/auto_version_bump.yml
@@ -1,7 +1,7 @@
 name: Version Bump Workflow
 
 on:
-  create:
+  push:
     branches:
       - 'release/*'   # Trigger when changes are pushed to any release branch
 permissions:
