--- a/.github/workflows/v1.yml
+++ b/.github/workflows/v1.yml
@@ -1,9 +1,9 @@
 name: Version Bump Workflow
 
 on:
-  create:
+  push:
     branches:
-      - 'release/*'
+      - 'release/*'   # Trigger whenever a release branch is created or updated
 
 permissions:
   contents: write
@@ -15,9 +15,17 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up Git identity
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Extract release branch name
+        id: branch
         run: echo "RELEASE_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: Determine new patch version
@@ -29,27 +37,28 @@ jobs:
           new_patch=$((patch + 1))
           new_version="$major.$minor.$new_patch"
           echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
-          echo "CSPROJ=$csproj_file" >> $GITHUB_ENV
+          echo "csproj_file=$csproj_file" >> $GITHUB_ENV
+
+      - name: Create version bump branch
+        run: git checkout -b version-bump/${NEW_VERSION}
 
       - name: Update csproj version
         run: |
-          sed -i "s/<Version>.*<\/Version>/<Version>${NEW_VERSION}<\/Version>/g" ${{ env.CSPROJ }}
-          sed -i "s/<AssemblyVersion>.*<\/AssemblyVersion>/<AssemblyVersion>${NEW_VERSION}.0<\/AssemblyVersion>/g" ${{ env.CSPROJ }}
-          sed -i "s/<FileVersion>.*<\/FileVersion>/<FileVersion>${NEW_VERSION}.0<\/FileVersion>/g" ${{ env.CSPROJ }}
+          sed -i "s/<Version>.*<\/Version>/<Version>${NEW_VERSION}<\/Version>/g" ${{ env.csproj_file }}
+          sed -i "s/<AssemblyVersion>.*<\/AssemblyVersion>/<AssemblyVersion>${NEW_VERSION}.0<\/AssemblyVersion>/g" ${{ env.csproj_file }}
+          sed -i "s/<FileVersion>.*<\/FileVersion>/<FileVersion>${NEW_VERSION}.0<\/FileVersion>/g" ${{ env.csproj_file }}
+
+      - name: Commit changes
+        run: |
+          git add ${{ env.csproj_file }}
+          git commit -m "Bump patch version to ${NEW_VERSION}"
+          git push origin version-bump/${NEW_VERSION}
 
       - name: Create Pull Request
-        id: cpr
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Bump version to ${NEW_VERSION}"
-          branch: version-bump/${NEW_VERSION}     # temporary branch
-          base: ${{ env.RELEASE_BRANCH }}         # target branch (release-2)
-          title: "Bump version to ${NEW_VERSION}"
+          branch: version-bump/${NEW_VERSION}
+          base: ${{ env.RELEASE_BRANCH }}
+          title: "Bump patch version to ${NEW_VERSION}"
           body: "Automated patch version bump."
-
-      - name: Show PR Number
-        run: echo "PR Number: ${{ steps.cpr.outputs.pull-request-number }}"
-
-      - name: Show PR URL
-        run: echo "PR URL: ${{ steps.cpr.outputs.pull-request-url }}"
