--- a/.github/actions/release-to-master/action.yml
+++ b/.github/actions/release-to-master/action.yml
@@ -40,8 +40,8 @@ runs:
         git checkout "$RELEASE_BRANCH"
         git pull origin "$RELEASE_BRANCH"
 
-        if git rev-parse "refs/tags/$TAG" >/dev/null 2>&1; then
-          echo "Tag already exists: $TAG — skipping tag creation"
+        if git rev-parse "refs/tags/${{ inputs.tag }}" >/dev/null 2>&1; then
+          echo "Tag already exists: ${{ inputs.tag }} — skipping tag creation"
         else
           echo "Creating tag: $TAG"
           git tag "$TAG"
