--- a/.github/actions/release-to-master/action.yml
+++ b/.github/actions/release-to-master/action.yml
@@ -43,9 +43,9 @@ runs:
         if git rev-parse "refs/tags/${{ inputs.tag }}" >/dev/null 2>&1; then
           echo "Tag already exists: ${{ inputs.tag }} — skipping tag creation"
         else
-          echo "Creating tag: $TAG"
-          git tag "$TAG"
-          git push origin "$TAG"
+          echo "Creating tag: ${{ inputs.tag }}"
+          git tag "${{ inputs.tag }}"
+          git push origin "${{ inputs.tag }}"
         fi
 
         git tag "${{ inputs.tag }}"
